<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layOut"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightPrimary"
    tools:context="com.jeremy.passwordmaker.MainActivity">

    <TextView
        android:id="@+id/tvOptions"
        android:layout_width="348dp"
        android:layout_height="43dp"
        android:gravity="center"
        android:text="@string/options"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/NewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="12sp"
        android:textIsSelectable="false"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418"
        tools:textColor="@color/colorPrimaryText" />

    <Button
        android:id="@+id/button"
        style="@android:style/Widget.Material.Button.Borderless.Colored"
        android:layout_width="391dp"
        android:layout_height="63dp"
        android:text="@string/new_pass"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewPass" />

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="348dp"
        android:layout_height="163dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:fillViewport="false"
        android:keepScreenOn="false"
        android:nestedScrollingEnabled="false"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbars="none"
        android:splitMotionEvents="false"
        app:layout_constraintBottom_toTopOf="@+id/NewPass"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOptions"
        app:layout_constraintVertical_bias="0.529">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/noSymbols"
                        android:layout_width="180dp"
                        android:layout_height="35dp"
                        android:text="@string/no_symbols"
                        tools:layout_editor_absoluteX="43dp"
                        tools:layout_editor_absoluteY="119dp" />

                    <CheckBox
                        android:id="@+id/noNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_numbers" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/englishLetters"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/english_letters"
                        android:textAlignment="textStart"
                        tools:layout_editor_absoluteX="-5dp"
                        tools:layout_editor_absoluteY="30dp" />

                    <CheckBox
                        android:id="@+id/englishWords"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/english_words" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/germanWords"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/german_words" />
                </TableRow>

            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <TableLayout
        android:layout_width="340dp"
        android:layout_height="134dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="7dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_password_length" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/max_password_length" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <SeekBar
                android:id="@+id/seekBarMin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadeScrollbars="true"
                android:scrollbars="horizontal" />

            <SeekBar
                android:id="@+id/seekBarMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvSBMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvSBMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>
